First release (#35)
* change file antlr and add the logic in java clases

* to kotlin

* Add configuration for Kotlin static code analyser.

Adde `idea` files, added plugin to maven and ignored `*.iml` files.

* change file antlr and add the logic in java clases

* to kotlin

* Add configuration for Kotlin static code analyser.

Adde `idea` files, added plugin to maven and ignored `*.iml` files.

* fixed git ignore

* Feature/funtional (#5)

* funtions implementation

* correct orthography

* Add alias for visitor function and refactor the project with this alias

* remove the classes and rename the functions name

* change the grammar from snake to camel case and solve all the conflicts

* change the name in params from Visitor implementation functions

* put  {} in else code

* add white space in all files

* [release/rebase master] Synchronised master and dev  (#11)

* Created configuration for GitHub Actions. (#9)

* change file antlr and add the logic in java clases

* to kotlin

* Create maven.yml

* changed order

* Added IDEA configurations

* Added IDEA configurations

* Add configuration for Kotlin static code analyser.

Adde `idea` files, added plugin to maven and ignored `*.iml` files.

* Create pull_request_template.md

* Update issue templates

* Create maven.yml

* changed order

* ignored misc file

* change file antlr and add the logic in java clases

* Create maven.yml

* ignored files

* remove duplicates plugins in maven and fix the style

* add uses for maven aplication check

Co-authored-by: Johan Sebastian Murillo Castillo <johan_smc@hotmail.com>

* fixed git ignore

* Feature/funtional (#5)

* funtions implementation

* correct orthography

* Add alias for visitor function and refactor the project with this alias

* remove the classes and rename the functions name

* change the grammar from snake to camel case and solve all the conflicts

* change the 